# BeeDance

./: CMakeLists.txt  calculationsld.cpp  calculationsld.h  chemicalformula.cpp  chemicalformula.h  chemicalformulachecking.cpp  chemicalformulachecking.h  chemicalformulaelement.cpp  chemicalformulaelement.h  chemicallabel.cpp  chemicaltextedit.cpp  coresld.cpp  coresld.h  datatablesld.cpp  datatablesld.h  element.cpp  element.h  file.qrc  formula.cpp  formula.h  inputwidget.cpp  inputwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  readdatafiles.cpp  readdatafiles.h  resultline.cpp  resultline.h  resultswidget.cpp  resultswidget.h  simpleformulaelement.cpp  simpleformulaelement.h  subformula.cpp  subformula.h
data/: data_sld.txt  elements.txt  isotopes.txt  sld_data.txt  sld_data2.txt
formula/: CMakeLists.txt  chemicalformulaelement.cpp  element.cpp  formula.cpp  formula.h  subformula.cpp
tests/: CMakeLists.txt
tests/test_chemicalformula/: CMakeLists.txt  tst_t_chemicalformula.cpp
tests/test_datatablesld/: CMakeLists.txt  tst_t_datatablesld.cpp
tests/test_simpleformulaelement/: CMakeLists.txt  tst_t_simpleformulaelement.cpp
widgets/: CMakeLists.txt  chemicallabel.h  chemicaltextedit.h  inputwidget.cpp  inputwidget.h  resultswidget.cpp  resultswidget.h
